--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="row aling-items-center">
             <div class="col-md-8">
-                <div class="data">
+                <div class="data ms-5">
                     <h1>I'm Nikhil Raj A <br>
                         <span>Front-end</span>  Developer </h1>
-                    <p>Expert in building scalable front-end infrastructure software, developing web applications and responsive websites using Angular, Typescript, Javascript, HTML, CSS, Bootstrap, Angular Material also modern libraries and frameworks. Always on the lookout for new technologies.</p>
+                    <p class="mt-4">Expert in building scalable front-end infrastructure software, developing web applications and responsive websites using Angular, Typescript, Javascript, HTML, CSS, Bootstrap, Angular Material also modern libraries and frameworks. Always on the lookout for new technologies.</p>
                 </div>
             </div>
         </div>
